--- a/cases/flower-shop/index.html
+++ b/cases/flower-shop/index.html
@@ -493,7 +493,7 @@
                <main class="Mainstyle__Main-sc-159fhha-0 kpAHLJ">
                   <section id="case-hero">
                      <div class="wrapper__main_inner-sc-d7vgux-0 CaseHerostyle__MainInner-sc-1828vw4-0 fhPlTV">
-                        <div class="CaseHerostyle__ImageContainer-sc-1828vw4-1 kEDQMq"><img src="/Images/flowe.jpg" alt="" class="CaseHerostyle__InnerImage-sc-1828vw4-2 hGMYBv"/></div>
+                        <div class="CaseHerostyle__ImageContainer-sc-1828vw4-1 kEDQMq"><img src="/Images/study.jpg" alt="" class="CaseHerostyle__InnerImage-sc-1828vw4-2 hGMYBv"/></div>
                        
                         <div class="CaseHerostyle__Content-sc-1828vw4-8 eiRjlN">
                            <h1 class="CaseHerostyle__MainHeader-sc-1828vw4-9 bBxrBI">E-Commerce plattform</h1>
@@ -505,7 +505,7 @@
                      <div class="wrapper__main_inner-sc-d7vgux-0 CasesTiltedstyle__MainInner-sc-1tt4t65-1 evhckS eEXDub">
                         <div class="CasesTiltedstyle__ImageBlock-sc-1tt4t65-2 diFMND">
                            <div class="CasesTiltedstyle__ColumnOne-sc-1tt4t65-3 jtrHXp one">
-                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
+                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/study.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe-four.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-one.png" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-two.avif" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
@@ -527,7 +527,7 @@
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-one.png" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                            </div>
                            <div class="CasesTiltedstyle__ColumnThree-sc-1tt4t65-5 isZSDg three">
-                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
+                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/study.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-one.png" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-two.avif" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-one.png" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
@@ -541,7 +541,7 @@
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-two.avif" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe-four.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe-three.avif" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
-                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
+                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/study.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe-four.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-one.png" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-two.avif" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
@@ -554,7 +554,7 @@
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-one.png" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe-four.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-two.avif" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
-                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
+                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/study.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-two.avif" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-one.png" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe-four.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
@@ -567,11 +567,11 @@
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe-four.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-one.png" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-two.avif" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
-                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
+                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/study.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe-three.avif" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                            </div>
                            <div class="CasesTiltedstyle__ColumnSeven-sc-1tt4t65-9 hBFqpQ seven">
-                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flowe.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
+                              <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/study.jpg" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-two.avif" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-one.png" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
                               <div class="CasesTiltedstyle__SingleImageContainer-sc-1tt4t65-10 jlobyc"><img src="/Images/flower-two.avif" alt="" class="CasesTiltedstyle__Image-sc-1tt4t65-11 gDHXPA"/></div>
