--- a/kontakta-oss/index.html
+++ b/kontakta-oss/index.html
@@ -494,7 +494,7 @@
                   <section>
                      <div class="wrapper__main_inner-sc-d7vgux-0 AddressHerostyle__MainInner-sc-hj46eg-0 fhPlTV">
                         <h1 class="text__heading_xxl-sc-1xracbr-1 AddressHerostyle__Header-sc-hj46eg-3 gGrZqD iXsWDy">Kontakta oss</h1>
-                        <p class="text__paragraph_big-sc-1xracbr-8 AddressHerostyle__Paragraph-sc-hj46eg-4 JNKLB iqKbtl">Är du nyfiken på vad vi kan åstadkomma tillsammans? Eller vill du bara veta lite mer om hur vi jobbar?  Vi vill förenkla tech för dig och ser rådgivning som en viktig del i vår service. Välkommen att slå oss en signal för att se hur vi på bästa sätt kan få din app, webbplats eller system att komma till liv. </p>
+                        <p class="text__paragraph_big-sc-1xracbr-8 AddressHerostyle__Paragraph-sc-hj46eg-4 JNKLB iqKbtl">Är du intresserad av att utforska vad vi kan åstadkomma tillsammans? Eller vill du bara få en djupare förståelse för vår arbetsmetod? Vi är passionerade för att göra teknik enklare för dig och ser rådgivning som en central del av vår service. Vi välkomnar dig att kontakta oss för att ta reda på hur vi på bästa sätt kan ge liv åt din app, webbplats eller system. Tveka inte att höra av dig till oss för att inleda en givande dialog.</p>
                         <div class="AddressHerostyle__Container-sc-hj46eg-1 evGucI">
                            <div class="AddressHerostyle__Content-sc-hj46eg-2 hbMtpn">
                               <h5 class="text__heading_sm-sc-1xracbr-5 AddressHerostyle__FormTitle-sc-hj46eg-13 iehGeS dzIuRD">Hur kan vi hjälpa dig?</h5>
