--- a/kontakta-oss/index.html
+++ b/kontakta-oss/index.html
@@ -519,11 +519,11 @@
                                  <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">mattheos.tasios@pasver.se</p>
                                  <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">076-611 11 18</p>
                                  <p class="text__detail_text-sc-1xracbr-11 AddressHerostyle__Subheader-sc-hj46eg-5 gyZFdf czxZgB">Besöksadress</p>
-                                 <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">Hammarbybacken 27, 120 30 Stockholm</p>
+                                 <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">Ekfatsgatan 4, 117 57 Stockholm</p>
                                  <p class="text__detail_text-sc-1xracbr-11 AddressHerostyle__Subheader-sc-hj46eg-5 gyZFdf czxZgB">Postadress</p>
-                                 <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">Kabyssgatan 4D, 120 30 Stockholm</p>
+                                 <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">Ekfatsgatan 4, 117 57 Stockholm</p>
                                  <p class="text__detail_text-sc-1xracbr-11 AddressHerostyle__Subheader-sc-hj46eg-5 gyZFdf czxZgB">Är du befintlig kund?</p>
-                                 <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">ongoing@qte.se</p>
+                                 <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">info@pasver.se</p>
                               </div>
                               <div class="AddressHerostyle__LinkBox-sc-hj46eg-9 hoXDyD">
                                  <p class="text__detail_text-sc-1xracbr-11 AddressHerostyle__LinkSubheader-sc-hj46eg-10 gyZFdf iOCOYE">Söker du jobb?</p>
@@ -645,11 +645,15 @@
                   <section id="text-with-two-images" class="TextWithTwoImagesstyle__Section-sc-1j3j7a4-0 gctzJo">
                      <div class="wrapper__main_inner-sc-d7vgux-0 TextWithTwoImagesstyle__MainInner-sc-1j3j7a4-1 fhPlTV fBLjIJ">
                         <div class="TextWithTwoImagesstyle__Content-sc-1j3j7a4-2 lecsVy">
-                           <h3 class="text__heading_lg-sc-1xracbr-3 TextWithTwoImagesstyle__Header-sc-1j3j7a4-3 bMjjZJ flKdJe">Ska du besöka oss?</h3>
-                           <p class="text__paragraph-sc-1xracbr-7 TextWithTwoImagesstyle__Paragraph-sc-1j3j7a4-4 kITvjv iCIPyw">Då letar du säkert efter en vägbeskrivning! Vi sitter i STHLM NEW 01 som ligger på Hammarbybacken 27. Det finns två ingångar i huset men om du går in på Hammarbybacken 27 kommer du rätt in på våning sex där receptionen är. Säg att du ska besöka oss så släpper de upp dig i hissen till oss på våning 21. <br />
+                           <h3 class="text__heading_lg-sc-1xracbr-3 TextWithTwoImagesstyle__Header-sc-1j3j7a4-3 bMjjZJ flKdJe">Vill du besöka oss?
+
+                           </h3>
+                           <p class="text__paragraph-sc-1xracbr-7 TextWithTwoImagesstyle__Paragraph-sc-1j3j7a4-4 kITvjv iCIPyw">Då letar du säkert efter en vägbeskrivning! Du hittar oss på Ekfatsgatan 4 i det imponerande K5-huset.
+
                               <br />
-                              Tunnelbana: Åk till Gullmarsplan<br />
-                              Tvärbana: Åk till Gullmarsplan eller Mårtensdal
+                              <br />
+                              Om du tar tunnelbanan, är Liljeholmen den närmaste stationen. Från Liljeholmen kan du enkelt ta dig till oss genom att följa skyltarna till Årstadal.<br /><br>
+                              För dig som föredrar att åka tvärbana, är Årstadal den närmaste hållplatsen. När du kliver av tvärbana kan du enkelt promenera till oss på Ekfatsgatan 4.
                            </p>
                         </div>
                        
