--- a/vara-tjanster/apputveckling/index.html
+++ b/vara-tjanster/apputveckling/index.html
@@ -730,7 +730,7 @@
                      <div class="wrapper__main_inner-sc-d7vgux-0 TextRowsstyle__MainInner-sc-f5buiq-1 fhPlTV iSEXWs">
                         <h2 color="lightBreeze" class="TextRowsstyle__Title-sc-f5buiq-3 eOixJd">Att skapa applikationer med pasver</h2>
                         <div class="TextRowsstyle__Content-sc-f5buiq-7 fVJiHB">
-                           <h4 class="text__heading_md-sc-1xracbr-4 TextRowsstyle__SizeH4-sc-f5buiq-9 iHfDNo CuLUy">VMångfalden av applikationstyper </h4>
+                           <h4 class="text__heading_md-sc-1xracbr-4 TextRowsstyle__SizeH4-sc-f5buiq-9 iHfDNo CuLUy">Mångfalden av applikationstyper </h4>
                            <div>
                               <p class="text__paragraph-sc-1xracbr-7 TextRowsstyle__Paragraph-sc-f5buiq-12 kITvjv cquguS" style="color: white;">Det existerar en mångfald av applikationstyper, så innan vi initierar ett projekt kommer vi gemensamt utforska vilken lösning som är mest ändamålsenlig för dina behov. Här tar vi hänsyn till vilka funktioner applikationen bör innefatta, i kombination med både budget och tidsplan för projektet. De varierande typerna av applikationer omfattar nativa applikationer, progressiva webbapplikationer och hybridapplikationer. Vi har kompetens inom utveckling av alla dessa applikationstyper och kommer att assistera dig i att välja den mest lämpliga vägen.</p>
                            </div>
