--- a/vara-tjanster/starta-ett-projekt/index.html
+++ b/vara-tjanster/starta-ett-projekt/index.html
@@ -586,8 +586,9 @@
                   </section>
                   <section id="Step-by-step">
                      <div class="wrapper__main_inner-sc-d7vgux-0 StepByStepstyle__MainInner-sc-canmlj-0 fhPlTV">
-                        <h2 class="text__heading_xl-sc-1xracbr-2 StepByStepstyle__Header-sc-canmlj-3 dDQFpA knXxiP">Att driva ett projekt med qte</h2>
-                        <p class="text__paragraph_big-sc-1xracbr-8 StepByStepstyle__IntroText-sc-canmlj-4 JNKLB jFSvtY">Att anlita qte innebär att du anlitar en helhetsleverantör. Vi hjälper er från första pappersskiss till en färdig och lanserad app eller hemsida. Därefter kan vi också sköta hosting och vidareutveckling av er produkt.</p>
+                        <h2 class="text__heading_xl-sc-1xracbr-2 StepByStepstyle__Header-sc-canmlj-3 dDQFpA knXxiP">Att driva ett projekt med Pasver</h2>
+                        <p class="text__paragraph_big-sc-1xracbr-8 StepByStepstyle__IntroText-sc-canmlj-4 JNKLB jFSvtY">
+                           Med Pasver som er helhetsleverantör tar vi hand om hela processen för ert projekt - från analys och design till utveckling och lansering. Vi erbjuder långsiktig support och uppdateringar för er produkt. Vi stödjer er från de första idéerna till att skapa och lansera en färdig app eller hemsida. Med Pasver får ni en pålitlig och professionell lösning. <br><br>När du väljer att samarbeta med Pasver får du en helhetsleverantör som tar hand om hela processen. Vi stödjer er från de första idéerna och skisserna, till att skapa och lansera en färdig app eller hemsida. Dessutom kan vi ta hand om hosting och fortsatt utveckling av er produkt.</p>
                         <div class="StepByStepstyle__Content-sc-canmlj-1 ejrpGD">
                            <div class="StepByStepstyle__StepBlock-sc-canmlj-5 jLruJA">
                               <svg fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -595,8 +596,8 @@
                               </svg>
                               <div class="StepByStepstyle__Number-sc-canmlj-6 doglKa">1</div>
                               <div class="StepByStepstyle__TextContainer-sc-canmlj-7 izUkoH">
-                                 <h3 class="text__heading_lg-sc-1xracbr-3 StepByStepstyle__Subheader-sc-canmlj-8 bMjjZJ kPXPTt">Förstudie och uppstart</h3>
-                                 <p class="text__paragraph-sc-1xracbr-7 StepByStepstyle__Paragraph-sc-canmlj-9 kITvjv evUErU">Vad är syftet med att göra om din hemsida? Vad är målet med den nya appen du vill skapa? Vilka utmaningar kommer vi stöta på? När vi startar ett nytt projekt börjar vi med att göra en förstudie där vi specificerar era behov och förväntningar. Vi bollar idéer och skapar en bild av vad vi ska åstadkomma tillsammans och framför allt lär vi känna er och er vision på djupet så vi kan fatta välgrundade beslut och göra smarta val.</p>
+                                 <h3 class="text__heading_lg-sc-1xracbr-3 StepByStepstyle__Subheader-sc-canmlj-8 bMjjZJ kPXPTt">Analysera och planera</h3>
+                                 <p class="text__paragraph-sc-1xracbr-7 StepByStepstyle__Paragraph-sc-canmlj-9 kITvjv evUErU">Vi börjar med en noggrann analys och planering för att förstå syftet och målen med er förändring. Vi tar hänsyn till utmaningar och behov, och skapar en gemensam vision för projektet. Genom att arbeta tillsammans kan vi fatta välgrundade beslut och göra smarta val.</p>
                               </div>
                               <div class="StepByStepstyle__ImageContainer-sc-canmlj-10 kfHqxk"><img src="/Images/team-place.jpg" alt="" class="StepByStepstyle__Image-sc-canmlj-11 hniBys"/></div>
                            </div>
@@ -606,8 +607,8 @@
                               </svg>
                               <div class="StepByStepstyle__Number-sc-canmlj-6 doglKa">2</div>
                               <div class="StepByStepstyle__TextContainer-sc-canmlj-7 izUkoH">
-                                 <h3 class="text__heading_lg-sc-1xracbr-3 StepByStepstyle__Subheader-sc-canmlj-8 bMjjZJ kPXPTt">UI- och UX-design</h3>
-                                 <p class="text__paragraph-sc-1xracbr-7 StepByStepstyle__Paragraph-sc-canmlj-9 kITvjv evUErU">Nu börjar projektet komma till liv och du får se de första utkasten av din produkt. Här designas både hur användaren ska röra sig i produkten och hur den ska se ut. Flödesschema, känsla, koncept. Vi jobbar fram designen i  flera iterationer och du är med och ger feedback under hela resans gång.</p>
+                                 <h3 class="text__heading_lg-sc-1xracbr-3 StepByStepstyle__Subheader-sc-canmlj-8 bMjjZJ kPXPTt">Designa användarupplevelsen</h3>
+                                 <p class="text__paragraph-sc-1xracbr-7 StepByStepstyle__Paragraph-sc-canmlj-9 kITvjv evUErU">Här tar projektet form och du får se de första utkasten av din produkt. Vi fokuserar både på användarvänlighet och visuell design. Genom flera iterationer och din feedback skapar vi en produkt som passar era behov och önskemål.</p>
                               </div>
                               <div class="StepByStepstyle__ImageContainer-sc-canmlj-10 kfHqxk"><img src="/Images/ui-design.avif" alt="" class="StepByStepstyle__Image-sc-canmlj-11 hniBys"/></div>
                            </div>
@@ -617,8 +618,8 @@
                               </svg>
                               <div class="StepByStepstyle__Number-sc-canmlj-6 doglKa">3</div>
                               <div class="StepByStepstyle__TextContainer-sc-canmlj-7 izUkoH">
-                                 <h3 class="text__heading_lg-sc-1xracbr-3 StepByStepstyle__Subheader-sc-canmlj-8 bMjjZJ kPXPTt">Utveckling &amp; testning</h3>
-                                 <p class="text__paragraph-sc-1xracbr-7 StepByStepstyle__Paragraph-sc-canmlj-9 kITvjv evUErU">När det är dags att börja koda kan du luta dig tillbaka och låta oss göra jobbet. Vi bygger upp projektet och nästa gång du ser det kommer det inte bara se bra ut - du kommer kunna interagera med det också. När bygget är klart och allt content är på plats gör vi gemensamt tester och ser till att allt är 100% redo inför livesättningen. Sen kör vi!</p>
+                                 <h3 class="text__heading_lg-sc-1xracbr-3 StepByStepstyle__Subheader-sc-canmlj-8 bMjjZJ kPXPTt">Utveckla och testa</h3>
+                                 <p class="text__paragraph-sc-1xracbr-7 StepByStepstyle__Paragraph-sc-canmlj-9 kITvjv evUErU">Nu tar vi hand om kodningen och bygger upp projektet. Du kan luta dig tillbaka medan vi tar hand om arbetet. Vi ser till att inte bara skapa en visuellt tilltalande produkt, utan också en interaktiv upplevelse. Efter att allt innehåll är på plats genomför vi gemensamma tester för att säkerställa att allt fungerar perfekt innan lanseringen.</p>
                               </div>
                               <div class="StepByStepstyle__ImageContainer-sc-canmlj-10 kfHqxk"><img src="/Images/web.avif" alt="" class="StepByStepstyle__Image-sc-canmlj-11 hniBys"/></div>
                            </div>
@@ -628,10 +629,10 @@
                               </svg>
                               <div class="StepByStepstyle__Number-sc-canmlj-6 doglKa">4</div>
                               <div class="StepByStepstyle__TextContainer-sc-canmlj-7 izUkoH">
-                                 <h3 class="text__heading_lg-sc-1xracbr-3 StepByStepstyle__Subheader-sc-canmlj-8 bMjjZJ kPXPTt">Leverans och vidareutveckling</h3>
-                                 <p class="text__paragraph-sc-1xracbr-7 StepByStepstyle__Paragraph-sc-canmlj-9 kITvjv evUErU">Den stora dagen är kommen då vi ska lansera och livesätta ditt projekt. Vi hjälper er att omdirigera den gamla sidan till den nya och flytta över den till önskad hostingleverantör. Är det en app som lanseras hjälper vi er självklart att få ut den i App Store och Google Play.<br />
+                                 <h3 class="text__heading_lg-sc-1xracbr-3 StepByStepstyle__Subheader-sc-canmlj-8 bMjjZJ kPXPTt">Leverans och fortsatt utveckling</h3>
+                                 <p class="text__paragraph-sc-1xracbr-7 StepByStepstyle__Paragraph-sc-canmlj-9 kITvjv evUErU">Dagen för lanseringen är här! Vi hjälper er att flytta över den nya produkten och omdirigera från den gamla sidan. Om det är en app hjälper vi er även med distributionen på App Store och Google Play. Vi strävar efter att vara en långsiktig partner och erbjuder fortsatt support och uppdateringar för er produkt.<br />
                                     <br />
-                                    Vårt mål är att vara en långsiktig partner och därför hjälper vi gärna till med kontinuerlig utveckling av din produkt. Vi erbjuder dessutom hosting och löpande uppdateringar.
+                                    Vårt mål är att göra er resa smidig och framgångsrik. Med Pasver som er partner kan ni känna er trygga och säkra på att ni får en professionell och pålitlig lösning för ert projekt.
                                  </p>
                               </div>
                               <div class="StepByStepstyle__ImageContainer-sc-canmlj-10 kfHqxk"><img src="/Images/team-one.jpeg" alt="" class="StepByStepstyle__Image-sc-canmlj-11 hniBys"/></div>
