--- a/vara-tjanster/starta-ett-projekt/index.html
+++ b/vara-tjanster/starta-ett-projekt/index.html
@@ -646,7 +646,7 @@
                         <p class="text__paragraph-sc-1xracbr-7 CaseThreestyle__Paragraph-sc-a06umc-4 gnqhWj hvPxKv">Vi har jobbat med allt från läxhjälp till sportbilar, så vi har troligtvis erfarenhet också från din bransch. Ta en titt på fler case eller hör av dig om du vill ta reda på vad vi kan åstadkomma tillsammans!</p>
                         <div class="CaseThreestyle__Cases-sc-a06umc-5 nGoEB">
                            <a href="../../cases/movie-explore/index.html" class="CaseThreestyle__Case-sc-a06umc-6 pYjJo">
-                              <img src="/Images/web-one.jpg" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
+                              <img src="/Images/movie-one.png" alt="" class="CaseThreestyle__InnerImage-sc-a06umc-7 fcHxPj"/>
                               <div class="CaseThreestyle__Overlay-sc-a06umc-8 gLMjsG"></div>
                               <div class="CaseThreestyle__Content-sc-a06umc-9 lkFNnp">
                                  <div class="CaseThreestyle__Labels-sc-a06umc-10 ooyUk">
