--- a/vara-tjanster/cyber-security/index.html
+++ b/vara-tjanster/cyber-security/index.html
@@ -453,7 +453,7 @@
          h1::selection,h2::selection,h3::selection,h4::selection,h5::selection,h6::selection,p::selection,li::selection,a::selection{background:#FEF683;}/*!sc*/
          data-styled.g735[id="sc-global-kzfIrN1"]{content:"sc-global-kzfIrN1,"}/*!sc*/
       </style>
-      <title data-react-helmet="true">UX- och UI-design för appar och webbplatser — qte development</title>
+      <title data-react-helmet="true">Cybersäkerhet</title>
       <link rel="icon" href="../../favicon-32x32.png@v=e607ec5d29294ef9194c47d59c130c16" type="image/png"/>
       <link rel="manifest" href="../../manifest.webmanifest" crossorigin="anonymous"/>
       <link rel="apple-touch-icon" sizes="48x48" href="../../icons/icon-48x48.png@v=e607ec5d29294ef9194c47d59c130c16"/>
@@ -513,7 +513,7 @@
                         </div>
                         <nav class="Headerstyle__SidebarMenu-sc-11sf5xg-10 jRIAJq">
                            <div class="Headerstyle__MenuGroupsContainer-sc-11sf5xg-11 dIYqnB">
-                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering och integrationer</a><a href="cyber-security/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Cyber Secuirty</a></div>
+                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering, integrationer & AI</a><a href="cyber-security/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Cybersäkerhet</a></div>
                               <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a href="index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Våra tjänster</a><a href="starta-ett-projekt/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Starta ett projekt</a></div>
                            </div>
                            <a href="../om-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Om oss</a><a href="../cases/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Cases</a><a href="../kontakta-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Kontakt</a>
@@ -916,8 +916,8 @@
                               <div class="Footerstyle__LinkContainer-sc-3wf7fx-6 fcPhxw">
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../apputveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Apputveckling</a></div>
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../webbutveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Webbutveckling</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../automatisering-integrationer/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Automatisering och integrationer</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Cyber Secuirty</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../automatisering-integrationer/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Automatisering, integrationer & AI</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Cybersäkerhet</a></div>
                               </div>
                            </div>
                            <div class="Footerstyle__ListContainer-sc-3wf7fx-4 cLDhLc">
