--- a/om-oss/index.html
+++ b/om-oss/index.html
@@ -437,7 +437,7 @@
                         </div>
                         <nav class="Headerstyle__SidebarMenu-sc-11sf5xg-10 jRIAJq">
                            <div class="Headerstyle__MenuGroupsContainer-sc-11sf5xg-11 dIYqnB">
-                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="../vara-tjanster/apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="../vara-tjanster/webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="../vara-tjanster/automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering och integrationer</a><a href="../vara-tjanster/cyber-security/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Cyber Secuirty</a></div>
+                              <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa" href="index.html#">Vår expertis</a><a href="../vara-tjanster/apputveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Apputveckling</a><a href="../vara-tjanster/webbutveckling/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Webbutveckling</a><a href="../vara-tjanster/automatisering-integrationer/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Automatisering, integrationer & AI</a><a href="../vara-tjanster/cyber-security/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Cybersäkerhet</a></div>
                               <div class="Headerstyle__MenuGroupWrapper-sc-11sf5xg-12 dwPtvC"><a href="../vara-tjanster/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Våra tjänster</a><a href="../vara-tjanster/starta-ett-projekt/index.html" sublink="true" class="Headerstyle__NewNav-sc-11sf5xg-13 bYcoqu">Starta ett projekt</a></div>
                            </div>
                            <a href="../om-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Om oss</a><a href="../cases/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Cases</a><a href="../kontakta-oss/index.html" sublink="false" class="Headerstyle__NewNav-sc-11sf5xg-13 cUOlTa">Kontakt</a>
@@ -521,8 +521,8 @@
                   <section id="work-with-us" class="contactFormContentstyle__Section-sc-1wvwxzl-0 iYyjAt">
                      <div class="wrapper__main_inner-sc-d7vgux-0 contactFormContentstyle__MainInner-sc-1wvwxzl-1 fhPlTV laXlEt">
                        <div class="contactFormContentstyle__Content-sc-1wvwxzl-2 hXqva">
-                         <h2 class="text__heading_xl-sc-1xracbr-2 contactFormContentstyle__Header-sc-1wvwxzl-3 dDQFpA GuKcz">Vill du veta mer?</h2>
-                         <p class="text__paragraph-sc-1xracbr-7 contactFormContentstyle__Paragraph-sc-1wvwxzl-4 kITvjv bBiTzt">Behöver du någon som lotsar dig igenom den digitala världen? Vi svarar gärna på dina frågor, guidar dig eller berättar mer om hur vi jobbar. Skicka ett mail så kontaktar vi dig! </p>
+                         <h2 class="text__heading_xl-sc-1xracbr-2 contactFormContentstyle__Header-sc-1wvwxzl-3 dDQFpA GuKcz">Önskar du ytterligare information?</h2>
+                         <p class="text__paragraph-sc-1xracbr-7 contactFormContentstyle__Paragraph-sc-1wvwxzl-4 kITvjv bBiTzt">Söker du någon som kan vägleda dig genom den digitala sfären? Vi är tillgängliga för att besvara dina frågor, erbjuda vägledning eller dela med oss av mer detaljer om vår arbetsmetodik. Vänligen skicka oss en e-post, och vi kommer att ta kontakt med dig inom kort! </p>
                          <h5 class="text__heading_sm-sc-1xracbr-5 contactFormContentstyle__SubHeader-sc-1wvwxzl-5 iehGeS ijChgB">Send an Email</h5>
                          <form id="yourForm" class="contactFormContentstyle__FormWrapper-sc-1wvwxzl-12 iiTQIG">
                            <div class="contactFormContentstyle__FormColumn-sc-1wvwxzl-13 eqgEDi">
@@ -573,8 +573,8 @@
                               <div class="Footerstyle__LinkContainer-sc-3wf7fx-6 fcPhxw">
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../vara-tjanster/apputveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Apputveckling</a></div>
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../vara-tjanster/webbutveckling/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Webbutveckling</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../vara-tjanster/automatisering-integrationer/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Automatisering och integrationer</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../vara-tjanster/cyber-security/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Cyber Secuirty</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../vara-tjanster/automatisering-integrationer/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Automatisering, integrationer & AI</a></div>
+                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../vara-tjanster/cyber-security/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Cybersäkerhet</a></div>
                               </div>
                            </div>
                            <div class="Footerstyle__ListContainer-sc-3wf7fx-4 cLDhLc">
