--- a/vara-tjanster/starta-ett-projekt/index.html
+++ b/vara-tjanster/starta-ett-projekt/index.html
@@ -572,13 +572,13 @@
                               <a href="../webbutveckling/index.html" target="" class="button__btn_large-sc-i59f7s-0 button__btn_small-sc-i59f7s-1 TextColumnsWithIconsstyle__ButtonLink-sc-10zxm2u-8 heGCnB hGfEZk gnZyVr">Läs mer</a>
                            </div>
                            <div class="TextColumnsWithIconsstyle__Block-sc-10zxm2u-4 cHHowN">
-                              <h3 class="text__heading_lg-sc-1xracbr-3 TextColumnsWithIconsstyle__Subheader-sc-10zxm2u-5 bMjjZJ">Automatisering &amp; integrationer</h3>
+                              <h3 class="text__heading_lg-sc-1xracbr-3 TextColumnsWithIconsstyle__Subheader-sc-10zxm2u-5 bMjjZJ">Automatisering, integrationer & AI</h3>
                               <p class="text__paragraph-sc-1xracbr-7 TextColumnsWithIconsstyle__Paragraph-sc-10zxm2u-6 kITvjv kdJqcs">Automatisering, integrationer & AI Framgången för en techprodukt beror också på dess bakomliggande funktionalitet. Med hjälp av AI (Artificial Intelligence) kan vi digitalisera och automatisera processer för att göra det enklare för både dig och dina kunder. Låt oss hjälpa dig att skapa smidiga och effektiva lösningar.</p>
                               <a href="../automatisering-integrationer/index.html" target="" class="button__btn_large-sc-i59f7s-0 button__btn_small-sc-i59f7s-1 TextColumnsWithIconsstyle__ButtonLink-sc-10zxm2u-8 heGCnB hGfEZk gnZyVr">Läs mer</a>
                            </div>
                            <div class="TextColumnsWithIconsstyle__Block-sc-10zxm2u-4 cHHowN">
                               <h3 class="text__heading_lg-sc-1xracbr-3 TextColumnsWithIconsstyle__Subheader-sc-10zxm2u-5 bMjjZJ">Cybersäkerhet</h3>
-                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsWithIconsstyle__Paragraph-sc-10zxm2u-6 kITvjv kdJqcs">Säkerhet är en avgörande faktor för att skydda din verksamhet online. Med vår expertis inom cybersäkerhet kan vi hjälpa dig att identifiera och hantera potentiella hot och sårbarheter. Låt oss säkra din digitala närvaro och ge dig trygghet i en alltmer digital värld.</p>
+                              <p class="text__paragraph-sc-1xracbr-7 TextColumnsWithIconsstyle__Paragraph-sc-10zxm2u-6 kITvjv kdJqcs">Säkerhet är en avgörande faktor för att skydda din verksamhet online. Med vår expertis inom cybersäkerhet kan vi hjälpa dig att identifiera och hantera potentiella hot och sårbarheter. (Låt oss säkra din digitala närvaro och ge dig trygghet i en alltmer digital värld.</p>
                               <a href="../cyber-security/index.html" target="" class="button__btn_large-sc-i59f7s-0 button__btn_small-sc-i59f7s-1 TextColumnsWithIconsstyle__ButtonLink-sc-10zxm2u-8 heGCnB hGfEZk gnZyVr">Läs mer</a>
                            </div>
                         </div>
@@ -833,7 +833,6 @@
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../om-oss/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Om oss</a></div>
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../cases/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Våra case</a></div>
                                  <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../kontakta-oss/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Kontakt</a></div>
-                                 <div class="Footerstyle__LinkWrapper-sc-3wf7fx-7 cBuxex"><a href="../../hallbarhet/index.html" target="" class="Footerstyle__FooterLink-sc-3wf7fx-8 fOHICr">Hållbarhet</a></div>
                               </div>
                            </div>
                         </div>
