--- a/cases/index.html
+++ b/cases/index.html
@@ -489,7 +489,7 @@
                   <section id="text-hero">
                      <div class="wrapper__main_inner-sc-d7vgux-0 TextHerostyle__MainInner-sc-uvyop-0 fhPlTV">
                         <h1 class="text__heading_xxl-sc-1xracbr-1 TextHerostyle__HeaderBlock-sc-uvyop-1 gGrZqD elzsKl"><span color="#0C3A53;" class="TextHerostyle__Header-sc-uvyop-2 drmTbD">Cases</span></h1>
-                        <p class="text__paragraph_big-sc-1xracbr-8 TextHerostyle__Paragraph-sc-uvyop-3 JNKLB jRqwbi">Vi har jobbat med allt från mäklare till medicin, så vi har troligtvis erfarenhet också från din bransch. Ta en titt på våra case eller hör av dig om du vill ta reda på vad vi kan åstadkomma tillsammans! </p>
+                        <p class="text__paragraph_big-sc-1xracbr-8 TextHerostyle__Paragraph-sc-uvyop-3 JNKLB jRqwbi">Vi har jobbat med allt från mäklare till hotell, så vi har troligtvis erfarenhet också från din bransch. Ta en titt på våra case eller hör av dig om du vill ta reda på vad vi kan åstadkomma tillsammans! </p>
                      </div>
                   </section>
                   <section id="case-grid">
