--- a/kontakta-oss/index.html
+++ b/kontakta-oss/index.html
@@ -518,10 +518,10 @@
                                  <p class="text__detail_text-sc-1xracbr-11 AddressHerostyle__Subheader-sc-hj46eg-5 gyZFdf czxZgB">Ring eller maila</p>
                                  <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">mattheos.tasios@pasver.se</p>
                                  <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">076-611 11 18</p>
-                                 <p class="text__detail_text-sc-1xracbr-11 AddressHerostyle__Subheader-sc-hj46eg-5 gyZFdf czxZgB">Besöksadress</p>
+                                 <p class="text__detail_text-sc-1xracbr-11 AddressHerostyle__Subheader-sc-hj46eg-5 gyZFdf czxZgB">adress</p>
                                  <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">Ekfatsgatan 4, 117 57 Stockholm</p>
-                                 <p class="text__detail_text-sc-1xracbr-11 AddressHerostyle__Subheader-sc-hj46eg-5 gyZFdf czxZgB">Postadress</p>
-                                 <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">Ekfatsgatan 4, 117 57 Stockholm</p>
+                                 <p class="text__detail_text-sc-1xracbr-11 AddressHerostyle__Subheader-sc-hj46eg-5 gyZFdf czxZgB">ÄR DU NY KUND?</p>
+                                 <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">yvonne.eriksson@pasver.se</p>
                                  <p class="text__detail_text-sc-1xracbr-11 AddressHerostyle__Subheader-sc-hj46eg-5 gyZFdf czxZgB">Är du befintlig kund?</p>
                                  <p class="text__paragraph-sc-1xracbr-7 AddressHerostyle__SubheaderContent-sc-hj46eg-6 kITvjv cHvmJT">info@pasver.se</p>
                               </div>
