--- a/cases/index.html
+++ b/cases/index.html
@@ -389,7 +389,7 @@
                <div class="Headerstyle__Header-sc-11sf5xg-0 gzTbnY">
                   <div class="Headerstyle__Container-sc-11sf5xg-1 kuxhvl">
                      <div class="Headerstyle__Bar-sc-11sf5xg-2 gtppHt"></div>
-                     <a href="index.html">
+                     <a href="/index.html">
                         <div data-gatsby-image-wrapper="" class="gatsby-image-wrapper Headerstyle__NewLogo-sc-11sf5xg-3 jRognm">
                            <div aria-hidden="true" style="padding-top:49.548736462093856%"></div>
                            <div aria-hidden="true" data-placeholder-image="" style="opacity:1;transition:opacity 500ms linear;object-fit:contain"></div>
@@ -732,7 +732,7 @@
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ"></div>
                                  </div>
                               </a>
-                              <a href="dice-roller/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
+                              <a href="../cases/dice-roller/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
                                  <img src="/Images/game.avif" alt="dice-roller" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
