--- a/hallbarhet/index.html
+++ b/hallbarhet/index.html
@@ -722,7 +722,7 @@
                                     <div class="CaseGridstyle__Labels-sc-l5243z-13 gdwNrQ"></div>
                                  </div>
                               </a>
-                              <a href="dice-roller/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
+                              <a href="../cases/dice-roller/index.html" class="CaseGridstyle__Case-sc-l5243z-9 kovmTf">
                                  <img src="/Images/web.jpg" alt="dice-roller" class="CaseGridstyle__InnerImage-sc-l5243z-10 dwwETd"/>
                                  <div class="CaseGridstyle__Overlay-sc-l5243z-11 frqPBW"></div>
                                  <div class="CaseGridstyle__Content-sc-l5243z-12 jLGyLH">
