--- a/cases/reseplanerare/index.html
+++ b/cases/reseplanerare/index.html
@@ -489,7 +489,7 @@
                                  <div class="SideContactFormstyled__ContactWrapper-sc-xpl7fe-11 cqWxmg">
                                     <img src="/Images/pic.jpg" alt="Jonatan Arnlund" class="SideContactFormstyled__ContactImage-sc-xpl7fe-12 gBxDIb"/>
                                     <div class="SideContactFormstyled__ContactTextWrapper-sc-xpl7fe-13 isCGCi">
-                                       <h6 class="text__heading_xs-sc-1xracbr-6 SideContactFormstyled__ContactText-sc-xpl7fe-14 XPBsz ipDxdU">Du kan kontakta vår VD & IT-SPECIALIST Mattheos Tasios direkt här:</h6>
+                                       <h6 class="text__heading_xs-sc-1xracbr-6 SideContactFormstyled__ContactText-sc-xpl7fe-14 XPBsz ipDxdU">Du kan kontakta vår VD & IT-SPECIALIST Mattheos Tasios här:</h6>
                                        <div class="SideContactFormstyled__ContactInfoWrapper-sc-xpl7fe-15 iWzDEv"><a href="mailto:mattheos.tasios@pasver.se" class="SideContactFormstyled__ContactInfoLink-sc-xpl7fe-16 egvMye">mattheos.tasios@pasver.se</a><a href="tel:0733-220455" class="SideContactFormstyled__ContactInfoLink-sc-xpl7fe-16 egvMye">0766-11 11 18</a></div>
                                     </div>
                                  </div>
