--- a/index.html
+++ b/index.html
@@ -512,7 +512,7 @@
          @keyframes hqVOOe{from{-webkit-transform:translateX(0%);-ms-transform:translateX(0%);transform:translateX(0%);}to{-webkit-transform:translateX(-100%);-ms-transform:translateX(-100%);transform:translateX(-100%);}}/*!sc*/
          data-styled.g745[id="sc-keyframes-hqVOOe"]{content:"hqVOOe,"};
       </style>
-      <title data-react-helmet="true">PASVER IT SOLUTIONS — We simplify tech</title>
+      <title data-react-helmet="true">PASVER IT SOLUTIONS</title>
       <link rel="icon" href="/Images/favicon.ico" type="image/png"/>
       <link rel="manifest" href="manifest.webmanifest" crossorigin="anonymous"/>
       <link rel="apple-touch-icon" sizes="48x48" href="icons/icon-48x48.png@v=e607ec5d29294ef9194c47d59c130c16"/>
@@ -702,7 +702,7 @@
                            <a href="vara-tjanster/automatisering-integrationer/index.html" target="" class="Servicesstyle__ServiceBlock-sc-jlqcj3-5 bcjVWt">
                               <div class="Servicesstyle__TextContainer-sc-jlqcj3-6 jUWyRm">
                                  <h3 class="text__heading_lg-sc-1xracbr-3 Servicesstyle__Subheader-sc-jlqcj3-7 bMjjZJ">Automatisering, Integrering & AI</h3>
-                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">En väsentlig komponent för en framgångsrik teknikprodukt är dess bakomliggande funktionalitet. Genom att digitalisera och automatisera processer strävar vi efter att skapa en smidig upplevelse både för dig och dina kunder. En genomtänkt arkitektur, som smidigt integrerar dina olika affärssystem, utgör en kritisk framgångsfaktor för din nyskapade produkt.  </p>
+                                 <p class="text__paragraph-sc-1xracbr-7 Servicesstyle__Paragraph-sc-jlqcj3-8 kITvjv ecLsbO">En väsentlig komponent för en framgångsrik teknikprodukt är dess bakomliggande funktionalitet. Genom att digitalisera och automatisera processer strävar vi efter att skapa en smidig upplevelse både för dig och dina kunder. En genomtänkt arkitektur, som smidigt integrerar dina olika affärssystem en genomtänkt arkitektur som smidigt integrerar olika affärssystem och utgör en kritisk framgångsfaktor för din nyskapade produkt.  </p>
                                  <div class="Servicesstyle__ButtonLink-sc-jlqcj3-11 fcckum">UPPTÄCK MER!</div>
                               </div>
                               <div class="Servicesstyle__ImageContainer-sc-jlqcj3-9 hVKTuo">
